Version 1.23.0 *
==================
- Added storing of the fold state for known source files.
- Added keyboard navigation and selection to the tables of the model library explorer.
- Added filter and search capability to the Project Explorer.
- Added dynamic switching default working directory.
- Fix broken links to option document when pressing `F1` in solver option editor.
- Improved connect editor workflow by linking agent and option name to corresponding entry in connect document with `F1` hotkey.
- Upgraded Studio to Qt 6.10.0
- Removed Windows 10 message box to disable the Help View to prevent crashes (Windows 10 reached its EOL).

Version 1.22.5
==================
- Fixed crash on Windows when installing a GAMS license in a user home directory, which has an Unicode name.
- Fixed an unsuccessful write to `gamsconfig.yaml`, e.g. when the permissions are not set properly.
- Fixed search results for `Open Tabs` and `All Files`, i.e. unrelated files have been searched and listed.
- Improved clipboard magic to install a GAMS license via the license dialog. Before, random text has been handled as a GAMS license, which produced unexpected error messages.
- Removed clipboard magic on Studio startup, i.e. the clipboard will only be checked for a GAMS licenses when the `GAMS Licensing` dialog is opened.

Version 1.22.4
==================
- Fixed incomplete list of files to search in, e.g. when search in `This Project` was selected.
- Fixed shortcuts `F11` and `Shift-F11`, i.e. they shouldn't be available when the related buttons are disabled.
- Fixed empty entries in the Project Explorer when the base directory has been changed.
- Fixed when the working or base directory doesn't exist, the project options should show the path in red.

Version 1.22.3
==================
- Fixed search result duplicates when using search in `All Files`, `This Project` or `Open Tabs`.
- Fixed 'Run with debugger' behaves like 'Step start with debugger'.